clusters/kubenuc/apps/film-tv-exporter/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr-exporter
  name: radarr-exporter
spec:
  replicas: 0
  selector:
    matchLabels:
      app: radarr-exporter
  strategy: {}
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9708'
      labels:
        app: radarr-exporter
    spec:
      containers:
      - image: ghcr.io/onedr0p/exportarr:v2.3.0@sha256:af535d94061cf97a52e1661945ffba78c03f9443eae7c0da1a80a5a4be56b520
        name: radarr-exporter
        args: ["radarr"]
        ports:
          - containerPort: 9708
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
        securityContext:
          runAsUser: 10001
          runAsGroup: 10001
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
            - all
          readOnlyRootFilesystem: true
      serviceAccount: tv-exporter
      serviceAccountName: tv-exporter
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lidarr-exporter
  name: lidarr-exporter
spec:
  replicas: 0
  selector:
    matchLabels:
      app: lidarr-exporter
  strategy: {}
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9709'
      labels:
        app: lidarr-exporter
    spec:
      containers:
      - image: ghcr.io/onedr0p/exportarr:v2.3.0@sha256:af535d94061cf97a52e1661945ffba78c03f9443eae7c0da1a80a5a4be56b520
        name: lidarr-exporter
        args: ["lidarr"]
        ports:
          - containerPort: 9709
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
        securityContext:
          runAsUser: 10001
          runAsGroup: 10001
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
            - all
          readOnlyRootFilesystem: true
      serviceAccount: tv-exporter
      serviceAccountName: tv-exporter
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr-exporter
  name: sonarr-exporter
spec:
  replicas: 0
  selector:
    matchLabels:
      app: sonarr-exporter
  strategy: {}
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9707'
      labels:
        app: sonarr-exporter
    spec:
      containers:
      - image: ghcr.io/onedr0p/exportarr:v2.3.0@sha256:af535d94061cf97a52e1661945ffba78c03f9443eae7c0da1a80a5a4be56b520
        name: sonarr-exporter
        args: ["sonarr"]
        ports:
          - containerPort: 9707
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
        securityContext:
          runAsUser: 10001
          runAsGroup: 10001
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop:
            - all
          readOnlyRootFilesystem: true
      serviceAccount: tv-exporter
      serviceAccountName: tv-exporter
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
