clusters/kubenuc/apps/film-tv-exporter/manifests/networkpolicy-default-deny-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: film-tv
spec:
  podSelector: {}
  policyTypes:
    - Ingress
